--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -5,6 +5,9 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "scripts": {
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
     "dev": "tsup src/index.tsx --format esm,cjs --dts --external react --watch",
@@ -19,7 +22,11 @@
     "@galileo-ui/ts-config": "*",
     "@types/react": "^19.0.4",
     "@types/react-dom": "^19.0.2",
+    "@types/styled-components": "^5.1.34",
     "react": "^19.0.0",
     "tsup": "^8.3.5"
+  },
+  "dependencies": {
+    "styled-components": "^6.1.14"
   }
 }
