--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -9,11 +9,11 @@
     "build": "storybook build"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@galileo-ui/eslint-config": "*",
     "@galileo-ui/react": "*",
     "@galileo-ui/tokens": "*",
-    "@galileo-ui/eslint-config": "*"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.3",
@@ -24,6 +24,7 @@
     "@storybook/react": "^8.4.7",
     "@storybook/react-vite": "^8.4.7",
     "@storybook/test": "^8.4.7",
+    "@types/node": "^22.10.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
