--- a/packages/docs/.eslintrc.json
+++ b/packages/docs/.eslintrc.json
@@ -1,3 +1,3 @@
 {
-  "extends": [ "plugin:storybook/recommended", "@galileo-ui/eslint-config/react"]
+  "extends": [ "@galileo-ui/eslint-config/react", "plugin:storybook/recommended"]
 }
