--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -12,11 +12,13 @@
     "@galileo-ui/eslint-config": "*",
     "@galileo-ui/react": "*",
     "@galileo-ui/tokens": "*",
+    "polished": "^4.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.3",
+    "@storybook/addon-backgrounds": "^8.4.7",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
     "@storybook/addon-onboarding": "^8.4.7",
