--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   ],
   "scripts": {
     "dev": "turbo run dev --parallel",
-    "build": "turbo run build"
+    "build": "turbo run build",
+    "build-storybook": "cd packages/docs && npm run build"
   },
   "packageManager": "npm@10.2.3",
   "dependencies": {
